# Crypto-Price

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
CryptoPrice/: GetData.py  __main__.py
src/cryptoker/: GetData.py  main.py
