[metadata]
name = cryptoker
version = 0.3.0
author = Dhruv Jain
description = CLI tool to find prices of various cryptocurrencies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/datdhruvjain/cryptoker
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = [
    "art==5.2",
    "certifi==2021.5.30",
    "chardet==4.0.0",
    "colorama==0.4.4",
    "idna==2.10",
    "requests==2.25.1",
    "urllib3==1.26.5"
]

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cryptoker = cryptoker.main:main